根据推送库新版本修改插件

--- a/plugin.xml
+++ b/plugin.xml
@@ -8,23 +8,17 @@
     <license>Apache</license>
     <keywords>cordova,PushManager</keywords>
 
-    
-
     <!-- android -->
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="PushManager" >
                 <param name="android-package" value="com.aisino.plugin.push.PushDemoActivity"/>
-            </feature>
+            </feature>			
         </config-file>
         <js-module src="www/android/PushManager.js" name="PushManager">
         	<clobbers target="window.plugin.pushManager" />
     		</js-module>
-    		<info>
-				 	1、Create a libs folder in the project if libs folder is not exit.
-					2、Copy the pushservice-VERSION.jar to the  libs folder and copy  the libbdpush_V1_0. So to the libs/armeabi folder.
-					3、Add the jars to the project through the Java Build Path
-				</info>
+
 				<config-file target="AndroidManifest.xml" parent="/manifest">
 				  <!-- Push service 运行需要的权限 -->
 					<uses-permission android:name="android.permission.INTERNET"/>
@@ -40,8 +34,7 @@
 					<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 					<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 				</config-file>
-				
-				
+								
 				<config-file target="AndroidManifest.xml" parent="/manifest/application">
 				   <activity
             android:name="com.aisino.plugin.push.PushDemoActivity"
@@ -53,14 +46,16 @@
 	        <activity
 	            android:name="com.aisino.plugin.push.CustomActivity"
 	            android:configChanges="orientation|keyboardHidden"
-	            android:label="Push_notification_test" >
+	            android:label="Push_notification_test" 
+				android:launchMode="singleTask">
 	        </activity>
 	
 	        <!-- push service rich media display -->
 	        <activity
 	            android:name="com.baidu.android.pushservice.richmedia.MediaViewActivity"
 	            android:configChanges="orientation|keyboardHidden"
-	            android:label="MediaViewActivity" >
+	            android:label="MediaViewActivity"
+				android:launchMode="singleTask"				>
 	        </activity>
 	        <activity
 	            android:name="com.baidu.android.pushservice.richmedia.MediaListActivity"
@@ -90,7 +85,7 @@
 	                <action android:name="android.intent.action.BOOT_COMPLETED" />
 	                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
 	                <action android:name="com.baidu.android.pushservice.action.notification.SHOW" />
-	                <action android:name="com.baidu.android.pushservice.action.media.CLICK" />
+	                <action android:name="com.baidu.android.pushservice.action.media.CLICK" />	                
 	            </intent-filter>
 	        </receiver>
 	
@@ -106,29 +101,28 @@
 	            </intent-filter>                   
 	        </receiver>
 	        
-	        <service
-	            android:name="com.baidu.android.pushservice.PushService"
-	            android:exported="true"
-	            android:process=":bdservice_v1" />
+			<service android:name="com.baidu.android.pushservice.PushService" android:exported="true"  android:process=":bdservice_v1">
+				<intent-filter>
+					<action android:name="com.baidu.android.pushservice.action.PUSH_SERVICE" />
+				</intent-filter>            
+			</service>
 	        
 	        <!-- push service end -->
 	        
 					<!-- 在百度开发者中心查询应用的API Key -->
-	        <meta-data android:name="api_key" android:value="PmdxEvYG5HatSGXzCYzqWahT" />
+	        <meta-data android:name="api_key" android:value="" />
 				</config-file>
 				
 				
         <source-file src="src/android/PushDemoActivity.java" target-dir="src/com/aisino/plugin/push" />
-        <source-file src="src/android/CustomActivity.java" target-dir="src/com/aisino/plugin/push" />
         <source-file src="src/android/LoginActivity.java" target-dir="src/com/aisino/plugin/push" />
         <source-file src="src/android/PushMessageReceiver.java" target-dir="src/com/aisino/plugin/push" />
         <source-file src="src/android/Utils.java" target-dir="src/com/aisino/plugin/push" />
         <source-file src="src/android/HttpRequest.java" target-dir="src/com/aisino/plugin/push" />
-		<source-file src="libs/armeabi/libbdpush_V1_0.so" target-dir="libs/armeabi" />
-		<source-file src="libs/mips/libbdpush_V1_0.so" target-dir="libs/mips" />
-		<source-file src="libs/x86/libbdpush_V1_0.so" target-dir="libs/x86" />
-		<source-file src="libs/pushservice-2.4.0.jar" target-dir="libs" />
-		
+		<source-file src="libs/armeabi/libbdpush_V2_0.so" target-dir="libs/armeabi" />
+		<source-file src="libs/mips/libbdpush_V2_0.so" target-dir="libs/mips" />
+		<source-file src="libs/x86/libbdpush_V2_0.so" target-dir="libs/x86" />
+		<source-file src="libs/pushservice-4.0.0.jar" target-dir="libs" />
     </platform>
 		<!-- ios -->
    <platform name="ios">
@@ -156,11 +150,9 @@
        <header-file src="src/ios/lib/Reachability.h" />
        <source-file src="src/ios/lib/Reachability.m" compiler-flags="-fno-objc-arc" />
         <!-- push Supporting Files -->
-        <source-file src="src/ios/Supporting Files/BPushConfig.plist" />
+       <source-file src="src/ios/Supporting Files/BPushConfig.plist" />
        <source-file src="src/ios/lib/libBPush.a" framework="true"/>
-        <source-file src="src/ios/Supporting Files/cat.caf" />
-       
-       
+       <source-file src="src/ios/Supporting Files/cat.caf" />
        <header-file src="src/ios/PushManager.h" />
        <source-file src="src/ios/PushManager.m" />
        <framework src="Foundation.framework"  />
